logs/slurm-2771769.out
Traceback (most recent call last):
  File "/scratch-shared/ssommers/train-kieran.py", line 8, in <module>
    import probeersel
  File "/gpfs/scratch1/shared/ssommers/probeersel.py", line 130
    n_in = n_input_channels if i == 1
                                     ^
SyntaxError: invalid syntax
cp: cannot stat '/scratch-shared/ssommers/results/': No such file or directory

JOB STATISTICS
==============
Job ID: 2771769
Cluster: snellius
User/Group: ssommers/ssommers
State: RUNNING
Nodes: 1
Cores per node: 18
CPU Utilized: 00:00:00
CPU Efficiency: 0.00% of 00:14:06 core-walltime
Job Wall-clock time: 00:00:47
Memory Utilized: 0.00 MB (estimated maximum)
Memory Efficiency: 0.00% of 64.00 GB (64.00 GB/node)
WARNING: Efficiency statistics may be misleading for RUNNING jobs.
